# complainthackq3

./: .env  .gitignore  ARCHITECTURE.md  README.md  main.py  prompt.txt  pyproject.toml  requirements.txt  start.sh
agents/: complaint_agent.py  mock_athena_agent.py
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx
models/: complaint_input.py
services/: categorization_service.py  extraction_service.py  fca_mapping.py
tests/: test_complaint_agent.py
treatment/: athena_mock_treatment.txt
