[project]
name = "complaint-agent"
version = "0.1.0"
description = "A FastAPI-based AI agent for FCA-compliant complaint analysis."
authors = ["Your Name <your.email@example.com>"]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 